[WIP] improved some tests